added one more extension

--- a/react-sample/.vscode/extensions.json
+++ b/react-sample/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "apollographql.vscode-apollo",
     "ms-azuretools.vscode-docker",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "googlecloudtools.cloudcode"
   ]
 }
